--- a/SAFE_PARKING_FRONT/src/app/components/localizaciones/listar-admin-localizaciones/listar-admin-localizaciones.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/localizaciones/listar-admin-localizaciones/listar-admin-localizaciones.component.html
@@ -1,131 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="header" *ngIf="verificar()">
-      <div class="encabezados" *ngIf="validarRol()">
-        <app-navbar-administrador
-          *ngIf="role === 'administrador'"
-        ></app-navbar-administrador>
-        <app-navbar-conductor
-          *ngIf="role === 'conductor'"
-        ></app-navbar-conductor>
-        <app-navbar-arrendador
-          *ngIf="role === 'arrendador'"
-        ></app-navbar-arrendador>
-      </div>
-    </div>
-    <div class="litle">
-      <h2 style="text-align: center">LISTA DE LOCALIZACIONES</h2>
-    </div>
 
-    <div class="container">
-      <mat-form-field>
-        <input
-          style="text-align: left"
-          matInput
-          (keyup)="filter($event)"
-          placeholder="Bucar por.."
-        />
-      </mat-form-field>
-      <table
-        mat-table
-        [dataSource]="dataSource"
-        class="mat-elevation-z8"
-        *ngIf="validarRol()"
-      >
-        <!--- Note that these columns can be defined in any order.
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
+
+<body>
+  <div class="header" *ngIf="verificar()">
+    <!-- Para ocultar barra en responsive -->
+    <button (click)="toggleNavbar()" class="toggle-button">
+      <i class="fa fa-bars"></i>
+    </button>
+    <!-- Fin de ocultar barra en responsive -->
+    <div class="encabezados" *ngIf="validarRol()">
+      <app-navbar-administrador [hidden]="!mostrarNavbar" *ngIf="role === 'administrador'"></app-navbar-administrador>
+      <app-navbar-conductor [hidden]="!mostrarNavbar" *ngIf="role === 'conductor'"></app-navbar-conductor>
+      <app-navbar-arrendador [hidden]="!mostrarNavbar" *ngIf="role === 'arrendador'"></app-navbar-arrendador>
+    </div>
+  </div>
+  <div class="litle">
+    <h2 style="text-align: center">LISTA DE LOCALIZACIONES</h2>
+  </div>
+
+  <div class="container">
+    <mat-form-field>
+      <input style="text-align: left" matInput (keyup)="filter($event)" placeholder="Bucar por.." />
+    </mat-form-field>
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" *ngIf="validarRol()">
+      <!--- Note that these columns can be defined in any order.
             The actual rendered columns are set as a property on the row definition" -->
 
-        <!-- idLocalizacion Column -->
-        <ng-container matColumnDef="idLocalizacion">
-          <th mat-header-cell *matHeaderCellDef>Codigo</th>
-          <td mat-cell *matCellDef="let element">
-            {{ element.idLocalizacion }}
-          </td>
-        </ng-container>
+      <!-- idLocalizacion Column -->
+      <ng-container matColumnDef="idLocalizacion">
+        <th mat-header-cell *matHeaderCellDef>Codigo</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.idLocalizacion }}
+        </td>
+      </ng-container>
 
-        <!-- direccion Column -->
-        <ng-container matColumnDef="direccion">
-          <th mat-header-cell *matHeaderCellDef>Direccion</th>
-          <td mat-cell *matCellDef="let element">{{ element.direccion }}</td>
-        </ng-container>
+      <!-- direccion Column -->
+      <ng-container matColumnDef="direccion">
+        <th mat-header-cell *matHeaderCellDef>Direccion</th>
+        <td mat-cell *matCellDef="let element">{{ element.direccion }}</td>
+      </ng-container>
 
-        <!-- distrito Column -->
-        <ng-container matColumnDef="distrito">
-          <th mat-header-cell *matHeaderCellDef>Distrito</th>
-          <td mat-cell *matCellDef="let element">
-            {{ element.distrito }}
-          </td>
-        </ng-container>
+      <!-- distrito Column -->
+      <ng-container matColumnDef="distrito">
+        <th mat-header-cell *matHeaderCellDef>Distrito</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.distrito }}
+        </td>
+      </ng-container>
 
-        <!-- region Column -->
-        <ng-container matColumnDef="region">
-          <th mat-header-cell *matHeaderCellDef>Region</th>
-          <td mat-cell *matCellDef="let element">{{ element.region }}</td>
-        </ng-container>
-        <!-- referencia Column -->
-        <ng-container matColumnDef="referencia">
-          <th mat-header-cell *matHeaderCellDef>Referencia</th>
-          <td mat-cell *matCellDef="let element">
-            {{ element.referencia }}
-          </td></ng-container
-        >
+      <!-- region Column -->
+      <ng-container matColumnDef="region">
+        <th mat-header-cell *matHeaderCellDef>Region</th>
+        <td mat-cell *matCellDef="let element">{{ element.region }}</td>
+      </ng-container>
+      <!-- referencia Column -->
+      <ng-container matColumnDef="referencia">
+        <th mat-header-cell *matHeaderCellDef>Referencia</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.referencia }}
+        </td>
+      </ng-container>
 
-        <!-- referencia Column -->
-        <ng-container matColumnDef="latitud">
-          <th mat-header-cell *matHeaderCellDef>Latitud</th>
-          <td mat-cell *matCellDef="let element">
-            {{ element.latitud }}
-          </td></ng-container
-        >
+      <!-- referencia Column -->
+      <ng-container matColumnDef="latitud">
+        <th mat-header-cell *matHeaderCellDef>Latitud</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.latitud }}
+        </td>
+      </ng-container>
 
-        <!-- referencia Column -->
-        <ng-container matColumnDef="longitud">
-          <th mat-header-cell *matHeaderCellDef>Longitud</th>
-          <td mat-cell *matCellDef="let element">
-            {{ element.longitud }}
-          </td></ng-container
-        >
+      <!-- referencia Column -->
+      <ng-container matColumnDef="longitud">
+        <th mat-header-cell *matHeaderCellDef>Longitud</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.longitud }}
+        </td>
+      </ng-container>
 
-        <ng-container matColumnDef="accion01">
-          <th mat-header-cell *matHeaderCellDef>Editar</th>
-          <td mat-cell *matCellDef="let element">
-            <button
-              *ngIf="role === 'administrador'"
-              class="botoncito1"
-              mat-raised-button
-              [routerLink]="['ediciones', element.idLocalizacion]"
-            >
-              <mat-icon>edit</mat-icon>
-            </button>
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="accion02">
-          <th mat-header-cell *matHeaderCellDef>Eliminar</th>
-          <td mat-cell *matCellDef="let element">
-            <button
-              *ngIf="role === 'administrador'"
-              class="botoncito2"
-              mat-raised-button
-              (click)="eliminar(element.idLocalizacion)"
-            >
-              <mat-icon>delete</mat-icon>
-            </button>
-          </td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-      </table>
-      <br />
-      <mat-paginator
-        [pageSizeOptions]="[5, 10, 25, 100]"
-        showFirstLastButtons
-      ></mat-paginator>
-    </div>
-  </body>
+      <ng-container matColumnDef="accion01">
+        <th mat-header-cell *matHeaderCellDef>Editar</th>
+        <td mat-cell *matCellDef="let element">
+          <button *ngIf="role === 'administrador'" class="botoncito1" mat-raised-button
+            [routerLink]="['ediciones', element.idLocalizacion]">
+            <mat-icon>edit</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="accion02">
+        <th mat-header-cell *matHeaderCellDef>Eliminar</th>
+        <td mat-cell *matCellDef="let element">
+          <button *ngIf="role === 'administrador'" class="botoncito2" mat-raised-button
+            (click)="eliminar(element.idLocalizacion)">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+    <br />
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" showFirstLastButtons></mat-paginator>
+  </div>
+</body>
+
 </html>
