Actualización del responsive para la entidad pago
Actualización del responsive para la entidad pago

--- a/SAFE_PARKING_FRONT/src/app/components/membresia/listar-usuario-membresia/listar-usuario-membresia.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/membresia/listar-usuario-membresia/listar-usuario-membresia.component.html
@@ -15,8 +15,7 @@
     </div>
 
     <div class="membership-list">
-      <mat-card *ngFor="let membership of memberships" 
-      class="membership-item">
+      <mat-card *ngFor="let membership of memberships" class="membership-item">
         <div class="informacion">
           <div class="tipo_membresia">
             <h3>{{ membership.tipoMembresia }}</h3>
