--- a/SAFE_PARKING_FRONT/src/app/components/vehiculos/buscar-vehiculos/buscar-vehiculos.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/vehiculos/buscar-vehiculos/buscar-vehiculos.component.html
@@ -1,66 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body *ngIf="verificar()">
-    <div class="encabezados" *ngIf="validarRol()">
-      <app-navbar-administrador
-        *ngIf="role === 'administrador'"
-      ></app-navbar-administrador>
-      <app-navbar-conductor *ngIf="role === 'conductor'"></app-navbar-conductor>
-      <app-navbar-arrendador
-        *ngIf="role === 'arrendador'"
-      ></app-navbar-arrendador>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
+
+<body *ngIf="verificar()">
+  <!-- Para ocultar barra en responsive -->
+  <button (click)="toggleNavbar()" class="toggle-button">
+    <i class="fa fa-bars"></i>
+  </button>
+  <!-- Fin de ocultar barra en responsive -->
+  <div class="encabezados" *ngIf="validarRol()">
+    <app-navbar-administrador [hidden]="!mostrarNavbar" *ngIf="role === 'administrador'"></app-navbar-administrador>
+    <app-navbar-conductor [hidden]="!mostrarNavbar" *ngIf="role === 'conductor'"></app-navbar-conductor>
+    <app-navbar-arrendador [hidden]="!mostrarNavbar" *ngIf="role === 'arrendador'"></app-navbar-arrendador>
+  </div>
+  <div class="form">
+    <div class="generic-group">
+      <label for="inputId">Ingrese el ID del vehículo:</label>
+      <input id="inputId" type="number" [(ngModel)]="idVehiculo" />
+      <button (click)="buscar()">Buscar</button>
     </div>
-    <div class="form">
-      <div class="generic-group">
-        <label for="inputId">Ingrese el ID del vehículo:</label>
-        <input id="inputId" type="number" [(ngModel)]="idVehiculo" />
-        <button (click)="buscar()">Buscar</button>
+    <hr />
+    <div class="generic-details" *ngIf="vehiculo">
+      <h2 class="generic-heading">Detalles del Vehículo</h2>
+      <div class="generic-box">
+        <h1>Placa</h1>
+        <p>{{ vehiculo.placaVehiculo }}</p>
       </div>
-      <hr />
-      <div class="generic-details" *ngIf="vehiculo">
-        <h2 class="generic-heading">Detalles del Vehículo</h2>
-        <div class="generic-box">
-          <h1>Placa</h1>
-          <p>{{ vehiculo.placaVehiculo }}</p>
-        </div>
-        <div class="generic-box">
-          <h1>Categoría</h1>
-          <p>{{ vehiculo.categoriaVehiculo }}</p>
-        </div>
-        <div class="generic-box">
-          <h1>Color</h1>
-          <p>{{ vehiculo.colorVehiculo }}</p>
-        </div>
-        <div class="generic-box">
-          <h1>Marca</h1>
-          <p>{{ vehiculo.marcaVehiculo }}</p>
-        </div>
-        <div class="generic-box">
-          <h1>Tamaño</h1>
-          <p>{{ vehiculo.tamanioVehiculo }}</p>
-        </div>
-        <div class="generic-box">
-          <h1>Tarjeta de Propiedad</h1>
-          <p>{{ vehiculo.tarjetaPropiedadVehiculo }}</p>
-        </div>
-        <div class="generic-box">
-          <h1>Imagen</h1>
-          <div class="col-md-6">
-            <img
-              mat-card-image
-              [src]="getImagenUrl()"
-              (error)="imagenNoCargada($event)"
-              alt="Foto del estacionamiento"
-              class="responsive-img"
-            />
-          </div>
+      <div class="generic-box">
+        <h1>Categoría</h1>
+        <p>{{ vehiculo.categoriaVehiculo }}</p>
+      </div>
+      <div class="generic-box">
+        <h1>Color</h1>
+        <p>{{ vehiculo.colorVehiculo }}</p>
+      </div>
+      <div class="generic-box">
+        <h1>Marca</h1>
+        <p>{{ vehiculo.marcaVehiculo }}</p>
+      </div>
+      <div class="generic-box">
+        <h1>Tamaño</h1>
+        <p>{{ vehiculo.tamanioVehiculo }}</p>
+      </div>
+      <div class="generic-box">
+        <h1>Tarjeta de Propiedad</h1>
+        <p>{{ vehiculo.tarjetaPropiedadVehiculo }}</p>
+      </div>
+      <div class="generic-box">
+        <h1>Imagen</h1>
+        <div class="col-md-6">
+          <img mat-card-image [src]="getImagenUrl()" (error)="imagenNoCargada($event)" alt="Foto del estacionamiento"
+            class="responsive-img" />
         </div>
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
