--- a/SAFE_PARKING_FRONT/src/app/components/vehiculos/listar-admin-vehiculos/listar-admin-vehiculos.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/vehiculos/listar-admin-vehiculos/listar-admin-vehiculos.component.html
@@ -1,129 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
 
-  <body *ngIf="verificar()">
-    <div class="encabezados" *ngIf="validarRol()">
-      <app-navbar-administrador
-        *ngIf="role === 'administrador'"
-      ></app-navbar-administrador>
-      <app-navbar-conductor *ngIf="role === 'conductor'"></app-navbar-conductor>
-      <app-navbar-arrendador
-        *ngIf="role === 'arrendador'"
-      ></app-navbar-arrendador>
-    </div>
-    <div class="litle">
-      <h2 style="text-align: center">LISTA DE VEHICULOS</h2>
-    </div>
-    <div class="example-container mat-elevation-z8">
-      <mat-form-field>
-        <input
-          style="text-align: left"
-          matInput
-          (keyup)="filter($event)"
-          placeholder="Bucar por.."
-        />
-      </mat-form-field>
-      <table
-        mat-table
-        [dataSource]="dataSource"
-        class="mat-elevation-z8"
-        *ngIf="validarRol()"
-      >
-        <!--- Note that these columns can be defined in any order.
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
+
+<body *ngIf="verificar()">
+  <!-- Para ocultar barra en responsive -->
+  <button (click)="toggleNavbar()" class="toggle-button">
+    <i class="fa fa-bars"></i>
+  </button>
+  <!-- Fin de ocultar barra en responsive -->
+  <div class="encabezados" *ngIf="validarRol()">
+    <app-navbar-administrador [hidden]="!mostrarNavbar" *ngIf="role === 'administrador'"></app-navbar-administrador>
+    <app-navbar-conductor [hidden]="!mostrarNavbar" *ngIf="role === 'conductor'"></app-navbar-conductor>
+    <app-navbar-arrendador [hidden]="!mostrarNavbar" *ngIf="role === 'arrendador'"></app-navbar-arrendador>
+  </div>
+  <div class="litle">
+    <h2 style="text-align: center">LISTA DE VEHICULOS</h2>
+  </div>
+  <div class="example-container mat-elevation-z8">
+    <mat-form-field>
+      <input style="text-align: left" matInput (keyup)="filter($event)" placeholder="Bucar por.." />
+    </mat-form-field>
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" *ngIf="validarRol()">
+      <!--- Note that these columns can be defined in any order.
               The actual rendered columns are set as a property on the row definition" -->
 
-        <!-- idVehiculo Column -->
+      <!-- idVehiculo Column -->
 
-        <ng-container matColumnDef="codigo" sticky>
-          <th mat-header-cell *matHeaderCellDef>Codigo</th>
-          <td mat-cell *matCellDef="let element">{{ element.idVehiculo }}</td>
-        </ng-container>
+      <ng-container matColumnDef="codigo" sticky>
+        <th mat-header-cell *matHeaderCellDef>Codigo</th>
+        <td mat-cell *matCellDef="let element">{{ element.idVehiculo }}</td>
+      </ng-container>
 
-        <!-- placa Column -->
-        <ng-container matColumnDef="placa">
-          <th mat-header-cell *matHeaderCellDef>Placa</th>
-          <td mat-cell *matCellDef="let element">
-            {{ element.placaVehiculo }}
-          </td>
-        </ng-container>
+      <!-- placa Column -->
+      <ng-container matColumnDef="placa">
+        <th mat-header-cell *matHeaderCellDef>Placa</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.placaVehiculo }}
+        </td>
+      </ng-container>
 
-        <!-- categoriaVehiculo Column -->
-        <ng-container matColumnDef="categoria">
-          <th mat-header-cell *matHeaderCellDef>Categoria</th>
-          <td mat-cell *matCellDef="let element">
-            {{ element.categoriaVehiculo }}
-          </td>
-        </ng-container>
+      <!-- categoriaVehiculo Column -->
+      <ng-container matColumnDef="categoria">
+        <th mat-header-cell *matHeaderCellDef>Categoria</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.categoriaVehiculo }}
+        </td>
+      </ng-container>
 
-        <!-- colorVehiculo Column -->
-        <ng-container matColumnDef="color">
-          <th mat-header-cell *matHeaderCellDef>Color</th>
-          <td mat-cell *matCellDef="let element">
-            {{ element.colorVehiculo }}
-          </td>
-        </ng-container>
-        <!-- marca Column -->
-        <ng-container matColumnDef="marca">
-          <th mat-header-cell *matHeaderCellDef>Marca</th>
-          <td mat-cell *matCellDef="let element">
-            {{ element.marcaVehiculo }}
-          </td>
-        </ng-container>
+      <!-- colorVehiculo Column -->
+      <ng-container matColumnDef="color">
+        <th mat-header-cell *matHeaderCellDef>Color</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.colorVehiculo }}
+        </td>
+      </ng-container>
+      <!-- marca Column -->
+      <ng-container matColumnDef="marca">
+        <th mat-header-cell *matHeaderCellDef>Marca</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.marcaVehiculo }}
+        </td>
+      </ng-container>
 
-        <!-- tamanio Column -->
-        <ng-container matColumnDef="tamanio">
-          <th mat-header-cell *matHeaderCellDef>Tamanio</th>
-          <td mat-cell *matCellDef="let element">
-            {{ element.tamanioVehiculo }}
-          </td>
-        </ng-container>
+      <!-- tamanio Column -->
+      <ng-container matColumnDef="tamanio">
+        <th mat-header-cell *matHeaderCellDef>Tamanio</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.tamanioVehiculo }}
+        </td>
+      </ng-container>
 
-        <!-- tarjetaPropiedadVehiculo Column -->
-        <ng-container matColumnDef="tarjeta de propiedad">
-          <th mat-header-cell *matHeaderCellDef>Tarjeta de propiedad</th>
-          <td mat-cell *matCellDef="let element">
-            {{ element.tarjetaPropiedadVehiculo }}
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="accion01" stickyEnd>
-          <th mat-header-cell *matHeaderCellDef>Editar</th>
-          <td mat-cell *matCellDef="let element">
-            <button
-              mat-raised-button
-              *ngIf="role === 'administrador'"
-              class="botoncito1"
-              [routerLink]="['ediciones', element.idVehiculo]"
-            >
-              <mat-icon>edit</mat-icon>
-            </button>
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="accion02" stickyEnd>
-          <th mat-header-cell *matHeaderCellDef>Eliminar</th>
-          <td mat-cell *matCellDef="let element">
-            <button
-              *ngIf="role === 'administrador'"
-              mat-raised-button
-              class="botoncito2"
-              (click)="eliminar(element.idVehiculo)"
-            >
-              <mat-icon>delete</mat-icon>
-            </button>
-          </td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-      </table>
-      <br />
-      <mat-paginator
-        [pageSizeOptions]="[5, 10, 25, 100]"
-        showFirstLastButtons
-      ></mat-paginator>
-    </div>
-  </body>
+      <!-- tarjetaPropiedadVehiculo Column -->
+      <ng-container matColumnDef="tarjeta de propiedad">
+        <th mat-header-cell *matHeaderCellDef>Tarjeta de propiedad</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.tarjetaPropiedadVehiculo }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="accion01" stickyEnd>
+        <th mat-header-cell *matHeaderCellDef>Editar</th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-raised-button *ngIf="role === 'administrador'" class="botoncito1"
+            [routerLink]="['ediciones', element.idVehiculo]">
+            <mat-icon>edit</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="accion02" stickyEnd>
+        <th mat-header-cell *matHeaderCellDef>Eliminar</th>
+        <td mat-cell *matCellDef="let element">
+          <button *ngIf="role === 'administrador'" mat-raised-button class="botoncito2"
+            (click)="eliminar(element.idVehiculo)">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+    <br />
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" showFirstLastButtons></mat-paginator>
+  </div>
+</body>
+
 </html>
